# Orkut

./: .gitignore  orkut-startup.sh  pyproject.toml
migrations/versions/: 5a32e3e6e88f_users_and_posts_table.py
seeds/: seedDev.py
src/: __init__.py  config.py  model.py  routes.py
src/models/: user.py
src/templates/: base.html  login.html
